# clean-clippings

./: .gitignore  README.md  pyproject.toml
src/clean_clippings/: app.py
src/clean_clippings/cli/: commands.py
src/clean_clippings/file/: clean.py  locate.py  validate.py
