[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-clippings"
version = "0.1.0"
description = "A command line app to clean clippings.txt files from the kindle"
authors = [
    {name = "Joshua Santore"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "click>=8.1.8",
]

[project.scripts]
clean-clippings = "clean_clippings.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
